Fix dark mode again

--- a/projeto-y/src/app/infoUsuario.module.css
+++ b/projeto-y/src/app/infoUsuario.module.css
@@ -27,6 +27,10 @@
   opacity: 1;
 }
 
+.dark {
+  background-color: #111;
+}
+
 /* Animação de entrada */
 @keyframes slideIn {
   0% {
